--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -60,3 +60,19 @@
       box-shadow: none;
       margin-top: 60px;
   }
+
+//----admin's style----
+  .custab{
+    border: 1px solid #ccc;
+
+    padding: 5px;
+    margin: 5% 0;
+    box-shadow: 3px 3px 2px #ccc;
+
+    transition: 0.5s;
+  }
+
+  .custab:hover{
+    box-shadow: 3px 3px 0px transparent;
+    transition: 0.5s;
+  }
